Add templating and UI experience
